# ecs

./: CMakeLists.txt  README.md
include/ecs/: component_container.hpp  ecs.hpp  entity.hpp  entity_generator.hpp  event_container.hpp  resource.hpp  sparse_set.hpp
src/: component_container.cpp  ecs.cpp  entity.cpp  entity_generator.cpp  sparse_set.cpp
test/: CMakeLists.txt  ecs.cpp
